2011-03-30  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* file-io.cc: Document the "all" parameter to fclose.

2011-03-29  Ben Abbott  <bpabbott@mac.com>

	* graphics.cc: Prevent ticks from being cropped by round-off errors
	when limmode == auto (bug #32701).

2011-03-28  Rik  <octave@nomad.inbox5.com>

	* DLD-FUNCTIONS/inv.cc (inv, inverse), DLD-FUNCTIONS/tril.cc (tril),
	data.cc (cumsum, szie), file-io.cc (fgets), ov-typeinfo.cc (typeinfo),
	ov-usr-fcn.cc (nargout), utils.cc (make_absolute_filename), 
	variables.cc (who): Improve docstrings

2011-03-25  John W. Eaton  <jwe@octave.org>

	* file-io.cc (Fmkstemp): Use gnulib::mkstemp.
	* DLD-FUNCTIONS/__init_fltk__.cc (f): Use gnulib::floor.

2011-03-18  Rik  <octave@nomad.inbox5.com>

	* dot.cc: Improve seealso cross references in docstring.

2011-03-18  Rik  <octave@nomad.inbox5.com>

	* help.cc (get_help_text, get_help_text_from_file): Improve docstrings.

2011-03-17  John W. Eaton  <jwe@octave.org>

	* ov-float.cc (octave_float_scalar::do_index_op): Widen to float
	matrix, not double.

2011-03-17  Rik  <octave@nomad.inbox5.com>

	* syscalls.cc (gethostname): Redo documentation string.

2011-03-17  Iain Murray  <iain@iainmurray.net>

	* DLD-FUNCTIONS/nprocs.cc: Delete file.
	* DLD-FUNCTIONS/nproc.cc: New file.  New function nproc provided by
	gnulib.
	* DLD-FUNCTIONS/module-files: Add nproc.cc.

2011-03-16  Iain Murray  <iain@iainmurray.net>

	* DLD-FUNCTIONS/nprocs.cc: New file.
	* DLD-FUNCTIONS/module-files: Add nprocs.cc.
	Expose nprocs and nprocs_conf from gnulib.

2011-03-15  Marco Caliari  <marco.caliari@univr.it>

	* graphics.cc: Simplify calculation of number of tick labels.  Fixes
	bug #32692.

2011-03-13  Konstantinos Poulios  <logari81@googlemail.com>

	* DLD-FUNCTIONS/__init_fltk__.cc (plot_window::plot_window):
	Revert changes from 2011-02-26.

2011-03-10  Konstantinos Poulios  <logari81@googlemail.com>

	* graphics.h.in: Add PERSISTENT mode to listener_mode.